--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
-node_modules
-dist
+# dependencies
+node_modules/
+
+# environment variables
+.env
+
+# production build output
+dist/
+build/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+
+# tests/coverage
+coverage/
+
+# optional npm cache
+.npm/
+
