--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-config-xo": "^0.47.0",
+    "eslint-plugin-prettier": "^5.5.1",
     "express": "^5.1.0",
     "file-loader": "^6.2.0",
     "globals": "^16.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
-    "prettier": "3.6.1",
+    "prettier": "^3.6.1",
     "style-loader": "^4.0.0",
+    "typescript-eslint": "^8.35.0",
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-middleware": "^7.4.2",
